feat: add fonts

--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@
 @font-face {
     font-family: 'Poppins';
     src: url("assets/fonts/Poppins-Bold.ttf");
-    font-weight: 300;;
+    font-weight: 300;
 }
