--- a/style.css
+++ b/style.css
@@ -8,3 +8,43 @@
     src: url("assets/fonts/Poppins-Bold.ttf");
     font-weight: 300;
 }
+*{
+    box-sizing: border-box;
+}
+.header{
+    border: 1px solid red;
+}
+.main{
+    border: 1px solid black;
+}
+.footer{
+    border: 1px solid green;
+}
+.body{
+    min-height: 100vh;
+    margin: 0; 
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.nav-list{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+html {
+    scroll-behavior: smooth;
+}
+.nav-list{
+    list-style: none;
+}
+.nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    transition: .5s;
+}
